Issue #23803: Fixed str.partition() and str.rpartition() when a separator is wider then partitioned string.